# micros

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  Makefile  README.md  about.toml  assembly_library.bzl  db.crt
.cargo/: config.toml
.idx/: dev.nix
arch/amd64/: boot.asm  long_mode_init.asm  x86_64-unknown-none.json
arch/amd64/micros_kernel_amd64/: Cargo.toml
arch/amd64/micros_kernel_amd64/src/: apic.rs  elf.rs  init.rs  lib.rs
arch/amd64/micros_memory_manager_amd64/: Cargo.toml  LICENSE  build.rs
arch/amd64/micros_memory_manager_amd64/src/: main.rs
bootstrap/src/arch/amd64/: BUILD  boot.asm
bootstrap/src/arch/x86_64/: boot.asm
display-daemon/: Cargo.toml
display-daemon/src/arch/amd64/: lib.rs
display-daemon/src/arch/x86_64/: lib.rs
image/: grub.cfg  linker.ld
kernel/: BUILD  Cargo.toml
kernel/arch/amd64/: x86_64-unknown-none.json
kernel/src/: lib.rs
kernel/src/arch/amd64/: apic.rs  mod.rs
kernel/src/arch/x86_64/: apic.rs  mod.rs  pic.rs
micros_kernel_common/src/: lib.rs
release/: micros-amd64.iso  micros.crt
src/: grub.cfg  limine.cfg  long_mode_init.asm
src/frame_allocation/: Cargo.toml
src/frame_allocation/src/: amd64.rs  lib.rs
src/framebuffer/: Cargo.toml
src/framebuffer/src/: lib.rs
src/micros_console_writer/: Cargo.toml
src/micros_kernel/: Cargo.toml  LICENSE  boot.asm  linker.ld  long_mode_init.asm
src/micros_kernel/src/: lib.rs  multiboot2.rs
src/micros_kernel/src/amd64/: amd64_frame_allocator.rs  apic.rs  elf.rs  init.rs  mod.rs
src/micros_kernel_amd64/: Cargo.toml
src/micros_kernel_amd64/src/: amd64_frame_allocator.rs  elf.rs  init.rs  lib.rs
src/micros_kernel_common/: Cargo.toml
src/micros_kernel_common/src/: lib.rs
src/micros_memory_manager/: Cargo.toml  build.rs  linker.ld
src/micros_memory_manager/src/: main.rs
src/micros_memory_manager_amd64/: build.rs  linker.ld
src/multiboot2/: Cargo.toml  LICENSE
src/multiboot2/src/: lib.rs
