[workspace]

members = [
	"arch/amd64/micros_kernel_amd64",
	"arch/amd64/micros_console_writer",
	"micros_kernel_common",
	"arch/amd64/micros_memory_manager_amd64",
]
resolver = "2"

[workspace.package]
authors = ["Caleb Baker <calebbaker774@gmail.com"]
license-file = "LICENSE"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
strip = true

