[workspace]

members = [
	"src/micros_console_writer",
	"src/micros_memory_manager",
	"src/micros_kernel", "src/frame_allocation",
]
resolver = "2"

[workspace.package]
authors = ["Caleb Baker <calebbaker774@gmail.com"]
license-file = "LICENSE"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
strip = true

