[package]
name = "kernel"
version = "0.1.0"
authors = ["CalebLBaker <calebbaker774@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["staticlib"]

[dependencies]
display-daemon = { path = "../display-daemon" }
multiboot2 = { path = "../multiboot2-elf64" }
x86_64 = "0.12.2"
pic8259_simple = "0.2.0"
spin = "0.5.2"
[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]

