[package]
name = "kernel"
version = "0.1.0"
authors = ["CalebLBaker <calebbaker774@gmail.com>"]
license = "BSL-1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
display-daemon = { path = "../display-daemon" }
x86_64 = "^0.14"
x2apic = "^0.4"
spin = "^0.9"
multiboot2 = { version = "^0.19", default-features = false }
