[package]
name = "micros_kernel_amd64"
version = "0.1.0"
authors = ["CalebLBaker <calebbaker774@gmail.com>"]
license = "BSL-1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
micros_kernel_common = { path = "../micros_kernel_common" }
multiboot2 = { version = "0.19.0", default-features = false }
x86_64 = "0.14.11"
x2apic = "0.4.3"
spin = "0.9.8"
